remove custom _setUpvariables in favor of jhipster autoconfiguration

--- a/generators/entity/templates/entity-delete-modal.js.ejs
+++ b/generators/entity/templates/entity-delete-modal.js.ejs
@@ -2,7 +2,7 @@ import React from 'react';
 import { TouchableHighlight, StyleSheet, Modal, Text, View } from 'react-native';
 import { connect } from 'react-redux';
 
-import <%= name %>Actions from './<%= kebabCaseName %>.reducer';
+import <%= context.entityNameCapitalized %>Actions from './<%= context.entityFileName %>.reducer';
 
 const styles = StyleSheet.create({
     centeredView: {
@@ -52,18 +52,18 @@ const styles = StyleSheet.create({
     },
 });
 
-function <%= name %>EntityDeleteModal(props) {
+function <%= context.entityNameCapitalized %>EntityDeleteModal(props) {
     const { visible, setVisible, entity, navigation } = props;
 
     const deleteEntity = () => {
-        props.delete<%= name %>(entity.id);
+        props.delete<%= context.entityNameCapitalized %>(entity.id);
         navigation.pop();
     };
     return (
         <Modal animationType="slide" transparent={true} visible={visible}>
             <View style={styles.centeredView}>
                 <View style={styles.modalView}>
-                    <Text style={styles.modalText}>Delete <%= name %> {entity.id}?</Text>
+                    <Text style={styles.modalText}>Delete <%= context.entityNameCapitalized %> {entity.id}?</Text>
 
                     <View style={styles.flex}>
                         <TouchableHighlight style={[styles.openButton, styles.submitButton]} onPress={deleteEntity}>
@@ -85,20 +85,20 @@ function <%= name %>EntityDeleteModal(props) {
 
 const mapStateToProps = (state) => {
     return {
-        <%= camelCaseName %>: state.<%= camelCaseNamePlural %>.<%= camelCaseName %>,
-        fetching: state.<%= camelCaseNamePlural %>.fetchingOne,
-        deleting: state.<%= camelCaseNamePlural %>.deleting,
-        errorDeleting: state.<%= camelCaseNamePlural %>.errorDeleting,
+        <%= context.entityInstance %>: state.<%= context.entityInstancePlural %>.<%= context.entityInstance %>,
+        fetching: state.<%= context.entityInstancePlural %>.fetchingOne,
+        deleting: state.<%= context.entityInstancePlural %>.deleting,
+        errorDeleting: state.<%= context.entityInstancePlural %>.errorDeleting,
     };
 };
 
 const mapDispatchToProps = (dispatch) => {
     return {
-        get<%= name %>: (id) => dispatch(<%= name %>Actions.<%= camelCaseName %>Request(id)),
-        getAll<%= pluralName %>: (options) => dispatch(<%= name %>Actions.<%= camelCaseName %>AllRequest(options)),
-        delete<%= name %>: (id) => dispatch(<%= name %>Actions.<%= camelCaseName %>DeleteRequest(id)),
-        reset<%= pluralName %>: () => dispatch(<%= name %>Actions.<%= camelCaseName %>Reset()),
+        get<%= context.entityNameCapitalized %>: (id) => dispatch(<%= context.entityNameCapitalized %>Actions.<%= context.entityInstance %>Request(id)),
+        getAll<%= context.entityNamePlural %>: (options) => dispatch(<%= context.entityNameCapitalized %>Actions.<%= context.entityInstance %>AllRequest(options)),
+        delete<%= context.entityNameCapitalized %>: (id) => dispatch(<%= context.entityNameCapitalized %>Actions.<%= context.entityInstance %>DeleteRequest(id)),
+        reset<%= context.entityNamePlural %>: () => dispatch(<%= context.entityNameCapitalized %>Actions.<%= context.entityInstance %>Reset()),
     };
 };
 
-export default connect(mapStateToProps, mapDispatchToProps)(<%= name %>EntityDeleteModal);
+export default connect(mapStateToProps, mapDispatchToProps)(<%= context.entityNameCapitalized %>EntityDeleteModal);
