--- a/generators/entity/templates/entity-detail-screen-style.js.ejs
+++ b/generators/entity/templates/entity-detail-screen-style.js.ejs
@@ -7,7 +7,7 @@ export default StyleSheet.create({
   label: {
     fontWeight: 'bold'
   },
-  <%_ if (entityContainsImageBlob) { _%>
+  <%_ if (context.fieldsContainImageBlob) { _%>
   imageBlob: {
     width: 100,
     height: 50,
